server/src/layerfile-service/antlr/LayerfileParser.ts
// Generated from LayerfileParser.g4 by ANTLR 4.9.0-SNAPSHOT


import { ATN } from "antlr4ts/atn/ATN";
import { ATNDeserializer } from "antlr4ts/atn/ATNDeserializer";
import { FailedPredicateException } from "antlr4ts/FailedPredicateException";
import { NotNull } from "antlr4ts/Decorators";
import { NoViableAltException } from "antlr4ts/NoViableAltException";
import { Override } from "antlr4ts/Decorators";
import { Parser } from "antlr4ts/Parser";
import { ParserRuleContext } from "antlr4ts/ParserRuleContext";
import { ParserATNSimulator } from "antlr4ts/atn/ParserATNSimulator";
import { ParseTreeListener } from "antlr4ts/tree/ParseTreeListener";
import { ParseTreeVisitor } from "antlr4ts/tree/ParseTreeVisitor";
import { RecognitionException } from "antlr4ts/RecognitionException";
import { RuleContext } from "antlr4ts/RuleContext";
//import { RuleVersion } from "antlr4ts/RuleVersion";
import { TerminalNode } from "antlr4ts/tree/TerminalNode";
import { Token } from "antlr4ts/Token";
import { TokenStream } from "antlr4ts/TokenStream";
import { Vocabulary } from "antlr4ts/Vocabulary";
import { VocabularyImpl } from "antlr4ts/VocabularyImpl";

import * as Utils from "antlr4ts/misc/Utils";

import { LayerfileParserListener } from "./LayerfileParserListener";
import { LayerfileParserVisitor } from "./LayerfileParserVisitor";


export class LayerfileParser extends Parser {
	public static readonly WS = 1;
	public static readonly COMMENT = 2;
	public static readonly BUTTON = 3;
	public static readonly CACHE = 4;
	public static readonly CHECKPOINT = 5;
	public static readonly CLONE = 6;
	public static readonly COPY = 7;
	public static readonly ENV = 8;
	public static readonly BUILD_ENV = 9;
	public static readonly FROM = 10;
	public static readonly MEMORY = 11;
	public static readonly RUN = 12;
	public static readonly RUN_BACKGROUND = 13;
	public static readonly RUN_REPEATABLE = 14;
	public static readonly SECRET_ENV = 15;
	public static readonly SETUP_FILE = 16;
	public static readonly SKIP_REMAINING_IF = 17;
	public static readonly SPLIT = 18;
	public static readonly EXPOSE_WEBSITE = 19;
	public static readonly USER = 20;
	public static readonly WAIT = 21;
	public static readonly WORKDIR = 22;
	public static readonly BUILD_ENV_COMMENT = 23;
	public static readonly BUILD_ENV_VALUE = 24;
	public static readonly BUILD_ENV_WS = 25;
	public static readonly BUILD_ENV_EOL = 26;
	public static readonly BUTTON_COMMENT = 27;
	public static readonly BUTTON_DATA = 28;
	public static readonly CHECKPOINT_COMMENT = 29;
	public static readonly CHECKPOINT_VALUE = 30;
	public static readonly CHECKPOINT_WS = 31;
	public static readonly CHECKPOINT_EOL = 32;
	public static readonly CLONE_VALUE = 33;
	public static readonly CLONE_WS = 34;
	public static readonly CLONE_EOL = 35;
	public static readonly ENV_COMMENT = 36;
	public static readonly ENV_VALUE_WS = 37;
	public static readonly ENV_VALUE = 38;
	public static readonly ENV_WS = 39;
	public static readonly ENV_EOL = 40;
	public static readonly WEBSITE_COMMENT = 41;
	public static readonly WEBSITE_EOL = 42;
	public static readonly WEBSITE_ITEM = 43;
	public static readonly WEBSITE_WS = 44;
	public static readonly FROM_COMMENT = 45;
	public static readonly FROM_DATA = 46;
	public static readonly MEMORY_COMMENT = 47;
	public static readonly MEMORY_EOF = 48;
	public static readonly MEMORY_AMOUNT = 49;
	public static readonly RUN_DATA = 50;
	public static readonly SECRET_ENV_VALUE = 51;
	public static readonly SECRET_ENV_WS = 52;
	public static readonly SECRET_ENV_EOL = 53;
	public static readonly SECRET_ENV_COMMENT = 54;
	public static readonly SKIP_REMAINING_IF_VALUE = 55;
	public static readonly SKIP_REMAINING_IF_AND = 56;
	public static readonly SKIP_REMAINING_IF_WS = 57;
	public static readonly SKIP_REMAINING_IF_EOL = 58;
	public static readonly SPLIT_NUMBER = 59;
	public static readonly SPLIT_WS = 60;
	public static readonly USER_COMMENT = 61;
	public static readonly USER_NAME = 62;
	public static readonly FILE_COMMENT = 63;
	public static readonly END_OF_FILES = 64;
	public static readonly FILE = 65;
	public static readonly FILE_WS = 66;
	public static readonly RULE_button = 0;
	public static readonly RULE_cache = 1;
	public static readonly RULE_checkpoint = 2;
	public static readonly RULE_clone = 3;
	public static readonly RULE_copy = 4;
	public static readonly RULE_env = 5;
	public static readonly RULE_build_env = 6;
	public static readonly RULE_from = 7;
	public static readonly RULE_memory = 8;
	public static readonly RULE_run = 9;
	public static readonly RULE_run_background = 10;
	public static readonly RULE_run_repeatable = 11;
	public static readonly RULE_secret_env = 12;
	public static readonly RULE_setup_file = 13;
	public static readonly RULE_skip_remain_if = 14;
	public static readonly RULE_split = 15;
	public static readonly RULE_expose_website = 16;
	public static readonly RULE_user = 17;
	public static readonly RULE_wait = 18;
	public static readonly RULE_workdir = 19;
	public static readonly RULE_comment = 20;
	public static readonly RULE_layerfile = 21;
	// tslint:disable:no-trailing-whitespace
	public static readonly ruleNames: string[] = [
		"button", "cache", "checkpoint", "clone", "copy", "env", "build_env", 
		"from", "memory", "run", "run_background", "run_repeatable", "secret_env", 
		"setup_file", "skip_remain_if", "split", "expose_website", "user", "wait", 
		"workdir", "comment", "layerfile",
	];

	private static readonly _LITERAL_NAMES: Array<string | undefined> = [
		undefined, undefined, undefined, "'BUTTON'", "'CACHE'", "'CHECKPOINT'", 
		"'CLONE '", "'COPY'", "'ENV '", "'BUILD ENV '", "'FROM '", "'MEMORY '", 
		"'RUN '", "'RUN BACKGROUND '", "'RUN REPEATABLE '", "'SECRET ENV '", "'SETUP FILE '", 
		"'SKIP REMAINING IF '", "'SPLIT '", "'EXPOSE WEBSITE '", "'USER '", "'WAIT '", 
		"'WORKDIR '", undefined, undefined, undefined, undefined, undefined, undefined, 
		undefined, undefined, undefined, undefined, undefined, undefined, undefined, 
		undefined, undefined, undefined, undefined, undefined, undefined, undefined, 
		undefined, undefined, undefined, undefined, undefined, undefined, undefined, 
		undefined, undefined, undefined, undefined, undefined, undefined, "'AND'",
	];
	private static readonly _SYMBOLIC_NAMES: Array<string | undefined> = [
		undefined, "WS", "COMMENT", "BUTTON", "CACHE", "CHECKPOINT", "CLONE", 
		"COPY", "ENV", "BUILD_ENV", "FROM", "MEMORY", "RUN", "RUN_BACKGROUND", 
		"RUN_REPEATABLE", "SECRET_ENV", "SETUP_FILE", "SKIP_REMAINING_IF", "SPLIT", 
		"EXPOSE_WEBSITE", "USER", "WAIT", "WORKDIR", "BUILD_ENV_COMMENT", "BUILD_ENV_VALUE", 
		"BUILD_ENV_WS", "BUILD_ENV_EOL", "BUTTON_COMMENT", "BUTTON_DATA", "CHECKPOINT_COMMENT", 
		"CHECKPOINT_VALUE", "CHECKPOINT_WS", "CHECKPOINT_EOL", "CLONE_VALUE", 
		"CLONE_WS", "CLONE_EOL", "ENV_COMMENT", "ENV_VALUE_WS", "ENV_VALUE", "ENV_WS", 
		"ENV_EOL", "WEBSITE_COMMENT", "WEBSITE_EOL", "WEBSITE_ITEM", "WEBSITE_WS", 
		"FROM_COMMENT", "FROM_DATA", "MEMORY_COMMENT", "MEMORY_EOF", "MEMORY_AMOUNT", 
		"RUN_DATA", "SECRET_ENV_VALUE", "SECRET_ENV_WS", "SECRET_ENV_EOL", "SECRET_ENV_COMMENT", 
		"SKIP_REMAINING_IF_VALUE", "SKIP_REMAINING_IF_AND", "SKIP_REMAINING_IF_WS", 
		"SKIP_REMAINING_IF_EOL", "SPLIT_NUMBER", "SPLIT_WS", "USER_COMMENT", "USER_NAME", 
		"FILE_COMMENT", "END_OF_FILES", "FILE", "FILE_WS",
	];
	public static readonly VOCABULARY: Vocabulary = new VocabularyImpl(LayerfileParser._LITERAL_NAMES, LayerfileParser._SYMBOLIC_NAMES, []);

	// @Override
	// @NotNull
	public get vocabulary(): Vocabulary {
		return LayerfileParser.VOCABULARY;
	}
	// tslint:enable:no-trailing-whitespace

	// @Override
	public get grammarFileName(): string { return "LayerfileParser.g4"; }

	// @Override
	public get ruleNames(): string[] { return LayerfileParser.ruleNames; }

	// @Override
	public get serializedATN(): string { return LayerfileParser._serializedATN; }

	protected createFailedPredicateException(predicate?: string, message?: string): FailedPredicateException {
		return new FailedPredicateException(this, predicate, message);
	}

	constructor(input: TokenStream) {
		super(input);
		this._interp = new ParserATNSimulator(LayerfileParser._ATN, this);
	}
	// @RuleVersion(0)
	public button(): ButtonContext {
		let _localctx: ButtonContext = new ButtonContext(this._ctx, this.state);
		this.enterRule(_localctx, 0, LayerfileParser.RULE_button);
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 44;
			this.match(LayerfileParser.BUTTON);
			this.state = 45;
			this.match(LayerfileParser.BUTTON_DATA);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public cache(): CacheContext {
		let _localctx: CacheContext = new CacheContext(this._ctx, this.state);
		this.enterRule(_localctx, 2, LayerfileParser.RULE_cache);
		let _la: number;
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 47;
			this.match(LayerfileParser.CACHE);
			this.state = 51;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			while (_la === LayerfileParser.FILE) {
				{
				{
				this.state = 48;
				this.match(LayerfileParser.FILE);
				}
				}
				this.state = 53;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
			}
			this.state = 54;
			this.match(LayerfileParser.END_OF_FILES);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public checkpoint(): CheckpointContext {
		let _localctx: CheckpointContext = new CheckpointContext(this._ctx, this.state);
		this.enterRule(_localctx, 4, LayerfileParser.RULE_checkpoint);
		let _la: number;
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 56;
			this.match(LayerfileParser.CHECKPOINT);
			this.state = 60;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			while (_la === LayerfileParser.CHECKPOINT_VALUE) {
				{
				{
				this.state = 57;
				this.match(LayerfileParser.CHECKPOINT_VALUE);
				}
				}
				this.state = 62;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
			}
			this.state = 63;
			this.match(LayerfileParser.CHECKPOINT_EOL);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public clone(): CloneContext {
		let _localctx: CloneContext = new CloneContext(this._ctx, this.state);
		this.enterRule(_localctx, 6, LayerfileParser.RULE_clone);
		let _la: number;
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 65;
			this.match(LayerfileParser.CLONE);
			this.state = 69;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			while (_la === LayerfileParser.CLONE_VALUE) {
				{
				{
				this.state = 66;
				this.match(LayerfileParser.CLONE_VALUE);
				}
				}
				this.state = 71;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
			}
			this.state = 72;
			this.match(LayerfileParser.CLONE_EOL);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public copy(): CopyContext {
		let _localctx: CopyContext = new CopyContext(this._ctx, this.state);
		this.enterRule(_localctx, 8, LayerfileParser.RULE_copy);
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 74;
			this.match(LayerfileParser.COPY);
			this.state = 75;
			this.match(LayerfileParser.FILE);
			this.state = 76;
			this.match(LayerfileParser.FILE);
			this.state = 77;
			this.match(LayerfileParser.END_OF_FILES);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public env(): EnvContext {
		let _localctx: EnvContext = new EnvContext(this._ctx, this.state);
		this.enterRule(_localctx, 10, LayerfileParser.RULE_env);
		let _la: number;
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 79;
			this.match(LayerfileParser.ENV);
			this.state = 83;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			while (_la === LayerfileParser.ENV_VALUE) {
				{
				{
				this.state = 80;
				this.match(LayerfileParser.ENV_VALUE);
				}
				}
				this.state = 85;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
			}
			this.state = 86;
			this.match(LayerfileParser.ENV_EOL);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public build_env(): Build_envContext {
		let _localctx: Build_envContext = new Build_envContext(this._ctx, this.state);
		this.enterRule(_localctx, 12, LayerfileParser.RULE_build_env);
		let _la: number;
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 88;
			this.match(LayerfileParser.BUILD_ENV);
			this.state = 92;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			while (_la === LayerfileParser.BUILD_ENV_VALUE) {
				{
				{
				this.state = 89;
				this.match(LayerfileParser.BUILD_ENV_VALUE);
				}
				}
				this.state = 94;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
			}
			this.state = 95;
			this.match(LayerfileParser.BUILD_ENV_EOL);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public from(): FromContext {
		let _localctx: FromContext = new FromContext(this._ctx, this.state);
		this.enterRule(_localctx, 14, LayerfileParser.RULE_from);
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 97;
			this.match(LayerfileParser.FROM);
			this.state = 98;
			this.match(LayerfileParser.FROM_DATA);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public memory(): MemoryContext {
		let _localctx: MemoryContext = new MemoryContext(this._ctx, this.state);
		this.enterRule(_localctx, 16, LayerfileParser.RULE_memory);
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 100;
			this.match(LayerfileParser.MEMORY);
			this.state = 101;
			this.match(LayerfileParser.MEMORY_AMOUNT);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public run(): RunContext {
		let _localctx: RunContext = new RunContext(this._ctx, this.state);
		this.enterRule(_localctx, 18, LayerfileParser.RULE_run);
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 103;
			this.match(LayerfileParser.RUN);
			this.state = 104;
			this.match(LayerfileParser.RUN_DATA);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public run_background(): Run_backgroundContext {
		let _localctx: Run_backgroundContext = new Run_backgroundContext(this._ctx, this.state);
		this.enterRule(_localctx, 20, LayerfileParser.RULE_run_background);
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 106;
			this.match(LayerfileParser.RUN_BACKGROUND);
			this.state = 107;
			this.match(LayerfileParser.RUN_DATA);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public run_repeatable(): Run_repeatableContext {
		let _localctx: Run_repeatableContext = new Run_repeatableContext(this._ctx, this.state);
		this.enterRule(_localctx, 22, LayerfileParser.RULE_run_repeatable);
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 109;
			this.match(LayerfileParser.RUN_REPEATABLE);
			this.state = 110;
			this.match(LayerfileParser.RUN_DATA);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public secret_env(): Secret_envContext {
		let _localctx: Secret_envContext = new Secret_envContext(this._ctx, this.state);
		this.enterRule(_localctx, 24, LayerfileParser.RULE_secret_env);
		let _la: number;
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 112;
			this.match(LayerfileParser.SECRET_ENV);
			this.state = 116;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			while (_la === LayerfileParser.SECRET_ENV_VALUE) {
				{
				{
				this.state = 113;
				this.match(LayerfileParser.SECRET_ENV_VALUE);
				}
				}
				this.state = 118;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
			}
			this.state = 119;
			this.match(LayerfileParser.SECRET_ENV_EOL);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public setup_file(): Setup_fileContext {
		let _localctx: Setup_fileContext = new Setup_fileContext(this._ctx, this.state);
		this.enterRule(_localctx, 26, LayerfileParser.RULE_setup_file);
		let _la: number;
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 121;
			this.match(LayerfileParser.SETUP_FILE);
			this.state = 125;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			while (_la === LayerfileParser.FILE) {
				{
				{
				this.state = 122;
				this.match(LayerfileParser.FILE);
				}
				}
				this.state = 127;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
			}
			this.state = 128;
			this.match(LayerfileParser.END_OF_FILES);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public skip_remain_if(): Skip_remain_ifContext {
		let _localctx: Skip_remain_ifContext = new Skip_remain_ifContext(this._ctx, this.state);
		this.enterRule(_localctx, 28, LayerfileParser.RULE_skip_remain_if);
		let _la: number;
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 130;
			this.match(LayerfileParser.SKIP_REMAINING_IF);
			this.state = 131;
			this.match(LayerfileParser.SKIP_REMAINING_IF_VALUE);
			this.state = 136;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			while (_la === LayerfileParser.SKIP_REMAINING_IF_AND) {
				{
				{
				this.state = 132;
				this.match(LayerfileParser.SKIP_REMAINING_IF_AND);
				this.state = 133;
				this.match(LayerfileParser.SKIP_REMAINING_IF_VALUE);
				}
				}
				this.state = 138;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
			}
			this.state = 139;
			this.match(LayerfileParser.SKIP_REMAINING_IF_EOL);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public split(): SplitContext {
		let _localctx: SplitContext = new SplitContext(this._ctx, this.state);
		this.enterRule(_localctx, 30, LayerfileParser.RULE_split);
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 141;
			this.match(LayerfileParser.SPLIT);
			this.state = 142;
			this.match(LayerfileParser.SPLIT_NUMBER);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public expose_website(): Expose_websiteContext {
		let _localctx: Expose_websiteContext = new Expose_websiteContext(this._ctx, this.state);
		this.enterRule(_localctx, 32, LayerfileParser.RULE_expose_website);
		let _la: number;
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 144;
			this.match(LayerfileParser.EXPOSE_WEBSITE);
			this.state = 148;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			while (_la === LayerfileParser.WEBSITE_ITEM) {
				{
				{
				this.state = 145;
				this.match(LayerfileParser.WEBSITE_ITEM);
				}
				}
				this.state = 150;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
			}
			this.state = 151;
			this.match(LayerfileParser.WEBSITE_EOL);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public user(): UserContext {
		let _localctx: UserContext = new UserContext(this._ctx, this.state);
		this.enterRule(_localctx, 34, LayerfileParser.RULE_user);
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 153;
			this.match(LayerfileParser.USER);
			this.state = 154;
			this.match(LayerfileParser.USER_NAME);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public wait(): WaitContext {
		let _localctx: WaitContext = new WaitContext(this._ctx, this.state);
		this.enterRule(_localctx, 36, LayerfileParser.RULE_wait);
		let _la: number;
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 156;
			this.match(LayerfileParser.WAIT);
			this.state = 160;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			while (_la === LayerfileParser.FILE) {
				{
				{
				this.state = 157;
				this.match(LayerfileParser.FILE);
				}
				}
				this.state = 162;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
			}
			this.state = 163;
			this.match(LayerfileParser.END_OF_FILES);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public workdir(): WorkdirContext {
		let _localctx: WorkdirContext = new WorkdirContext(this._ctx, this.state);
		this.enterRule(_localctx, 38, LayerfileParser.RULE_workdir);
		let _la: number;
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 165;
			this.match(LayerfileParser.WORKDIR);
			this.state = 169;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			while (_la === LayerfileParser.FILE) {
				{
				{
				this.state = 166;
				this.match(LayerfileParser.FILE);
				}
				}
				this.state = 171;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
			}
			this.state = 172;
			this.match(LayerfileParser.END_OF_FILES);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public comment(): CommentContext {
		let _localctx: CommentContext = new CommentContext(this._ctx, this.state);
		this.enterRule(_localctx, 40, LayerfileParser.RULE_comment);
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 174;
			this.match(LayerfileParser.COMMENT);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public layerfile(): LayerfileContext {
		let _localctx: LayerfileContext = new LayerfileContext(this._ctx, this.state);
		this.enterRule(_localctx, 42, LayerfileParser.RULE_layerfile);
		let _la: number;
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 198;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			do {
				{
				this.state = 198;
				this._errHandler.sync(this);
				switch ( this.interpreter.adaptivePredict(this._input, 11, this._ctx) ) {
				case 1:
					{
					this.state = 176;
					this.button();
					}
					break;

				case 2:
					{
					this.state = 177;
					this.cache();
					}
					break;

				case 3:
					{
					this.state = 178;
					this.checkpoint();
					}
					break;

				case 4:
					{
					this.state = 179;
					this.from();
					}
					break;

				case 5:
					{
					this.state = 180;
					this.clone();
					}
					break;

				case 6:
					{
					this.state = 181;
					this.copy();
					}
					break;

				case 7:
					{
					this.state = 182;
					this.env();
					}
					break;

				case 8:
					{
					this.state = 183;
					this.build_env();
					}
					break;

				case 9:
					{
					this.state = 184;
					this.from();
					}
					break;

				case 10:
					{
					this.state = 185;
					this.memory();
					}
					break;

				case 11:
					{
					this.state = 186;
					this.run();
					}
					break;

				case 12:
					{
					this.state = 187;
					this.run_background();
					}
					break;

				case 13:
					{
					this.state = 188;
					this.run_repeatable();
					}
					break;

				case 14:
					{
					this.state = 189;
					this.secret_env();
					}
					break;

				case 15:
					{
					this.state = 190;
					this.setup_file();
					}
					break;

				case 16:
					{
					this.state = 191;
					this.skip_remain_if();
					}
					break;

				case 17:
					{
					this.state = 192;
					this.split();
					}
					break;

				case 18:
					{
					this.state = 193;
					this.expose_website();
					}
					break;

				case 19:
					{
					this.state = 194;
					this.user();
					}
					break;

				case 20:
					{
					this.state = 195;
					this.wait();
					}
					break;

				case 21:
					{
					this.state = 196;
					this.workdir();
					}
					break;

				case 22:
					{
					this.state = 197;
					this.comment();
					}
					break;
				}
				}
				this.state = 200;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
			} while ((((_la) & ~0x1F) === 0 && ((1 << _la) & ((1 << LayerfileParser.COMMENT) | (1 << LayerfileParser.BUTTON) | (1 << LayerfileParser.CACHE) | (1 << LayerfileParser.CHECKPOINT) | (1 << LayerfileParser.CLONE) | (1 << LayerfileParser.COPY) | (1 << LayerfileParser.ENV) | (1 << LayerfileParser.BUILD_ENV) | (1 << LayerfileParser.FROM) | (1 << LayerfileParser.MEMORY) | (1 << LayerfileParser.RUN) | (1 << LayerfileParser.RUN_BACKGROUND) | (1 << LayerfileParser.RUN_REPEATABLE) | (1 << LayerfileParser.SECRET_ENV) | (1 << LayerfileParser.SETUP_FILE) | (1 << LayerfileParser.SKIP_REMAINING_IF) | (1 << LayerfileParser.SPLIT) | (1 << LayerfileParser.EXPOSE_WEBSITE) | (1 << LayerfileParser.USER) | (1 << LayerfileParser.WAIT) | (1 << LayerfileParser.WORKDIR))) !== 0));
			this.state = 202;
			this.match(LayerfileParser.EOF);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}

	public static __ATN: ATN;
	public static get _ATN(): ATN {
		if (!LayerfileParser.__ATN) {
			LayerfileParser.__ATN = new ATNDeserializer().deserialize(Utils.toCharArray(LayerfileParser._serializedATN));
		}

		return LayerfileParser.__ATN;
	}

}
